--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.18",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^7.0.6",
+    "@react-navigation/material-top-tabs": "^7.0.6",
+    "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
+    "expo": "^52.0.8",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.14.0",
+    "firebase": "^11.0.2",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-pager-view": "^6.5.0",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-pager-view": "^6.5.1",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^3.35.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.26.0"
   },
   "private": true
 }
